# sales-lead-management

./: .env.example  .flake8  .gitignore  CLAUDE.md  README.md  SYSTEM_DESIGN.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
app/: config.py  database.py  dependencies.py  main.py  seed.py
app/ai/: enricher.py  scorer.py  summarizer.py
app/middleware/: logging_config.py
app/routes/: leads.py  users.py
app/services/: lead_service.py  note_service.py  user_service.py
backend/: Dockerfile  docker-compose.yml  pyproject.toml
backend/alembic/versions/: 0001_init_schema.py
backend/app/: config.py  dependencies.py  main.py
backend/app/ai/: scorer.py  summarizer.py
backend/app/middleware/: logging_config.py  telemetry.py
backend/app/models/: models.py
backend/app/routes/: analytics.py  leads.py  notes.py  users.py
backend/app/schemas/: schemas.py
backend/app/services/: lead_service.py  user_service.py
backend/observability/: otel-collector.yml  tempo.yml
backend/observability/grafana/provisioning/datasources/: datasources.yml
backend/tests/: test_ai_unit.py  test_integration.py
fe/: package-lock.json  package.json  vite.config.ts
fe/src/: App.tsx
fe/src/api/: analytics.ts  auth.ts  client.ts  leads.ts  notes.ts  users.ts
fe/src/components/: Layout.tsx  NoteItem.tsx  Pagination.tsx  PriorityBadge.tsx  StatusBadge.tsx
fe/src/pages/: AnalyticsPage.tsx  CreateLeadPage.tsx  LeadDetailPage.tsx  LeadsListPage.tsx  LoginPage.tsx  RegisterPage.tsx
fe/src/store/: authStore.ts
fe/src/types/: index.ts
observability/: loki.yml  prometheus.yml
tests/: conftest.py  test_ai_unit.py  test_integration.py
